test/files/neg/bug1878.check
bug1878.scala:3: error: _* may only come last
  val err1 = "" match { case Seq(f @ _*, ',') => f }
                                 ^
bug1878.scala:3: error: scrutinee is incompatible with pattern type;
 found   : Seq[A]
 required: java.lang.String
  val err1 = "" match { case Seq(f @ _*, ',') => f }
                                ^
bug1878.scala:9: error: _* may only come last
  val List(List(_*, arg2), _) = List(List(1,2,3), List(4,5,6))
                 ^
bug1878.scala:13: error: _* may only come last
    case <p> { _* } </p> =>
                ^
four errors found
